{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 15,
  "lineage": "46478885-51cd-daea-0b01-5530340671fe",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "UST-VI",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkInterfaces/UST-nic",
            "internal_domain_name_suffix": "puz5dnuv4cpelifkgxjtundrtg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "UST-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/public-subnet"
              }
            ],
            "location": "eastus",
            "name": "UST-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "UST-resource-group"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.UST-RG",
            "azurerm_subnet.public",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "UST-SG-ASSOCIATION",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkInterfaces/UST-nic|/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkSecurityGroups/UST-nsg",
            "network_interface_id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkInterfaces/UST-nic",
            "network_security_group_id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkSecurityGroups/UST-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.UST-VI",
            "azurerm_network_security_group.UST-SG",
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.UST-RG",
            "azurerm_subnet.public",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "UST-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkSecurityGroups/UST-nsg",
            "location": "eastus",
            "name": "UST-nsg",
            "resource_group_name": "UST-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.UST-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "UST-SG-RULE",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkSecurityGroups/UST-nsg/securityRules/UST-nsg-rule",
            "name": "UST-nsg-rule",
            "network_security_group_name": "UST-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "UST-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.UST-SG",
            "azurerm_resource_group.UST-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "UST-SG-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/networkSecurityGroups/UST-nsg/securityRules/UST-nsg-ssh",
            "name": "UST-nsg-ssh",
            "network_security_group_name": "UST-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "UST-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.UST-SG",
            "azurerm_resource_group.UST-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "UST-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/private-subnet-1",
            "name": "private-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UST-resource-group",
            "virtual_network_name": "UST-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/private-subnet-2",
            "name": "private-subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UST-resource-group",
            "virtual_network_name": "UST-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/private-subnet-3",
            "name": "private-subnet-3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UST-resource-group",
            "virtual_network_name": "UST-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/private-subnet-4",
            "name": "private-subnet-4",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UST-resource-group",
            "virtual_network_name": "UST-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UST-resource-group",
            "virtual_network_name": "UST-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG",
            "azurerm_virtual_network.UST-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "UST-VN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b6f1337d-f095-459e-a0aa-35d33a34719e",
            "id": "/subscriptions/510cca2f-8892-480e-93d8-f2d2e5bb495a/resourceGroups/UST-resource-group/providers/Microsoft.Network/virtualNetworks/UST-vnet",
            "location": "eastus",
            "name": "UST-vnet",
            "resource_group_name": "UST-resource-group"
          },
          "dependencies": [
            "azurerm_resource_group.UST-RG"
          ]
        }
      ]
    }
  ]
}